textwire/testdata/bad/unknown-default-slot/index.tw
@component ("book", { title: "Harry Potter" })
    @slot
        <p>Some content is here</p>
    @end
@end
